@@ -55,8 +55,12 @@ Minor Changes:
  * The @ns*emit commands and ns*emit() functions are no longer restricted;
    when used by mortals, they work exactly the same as the non-ns versions.
    Suggested by Michael Blackburn. [MG]
+   
+Commands:
+ * Removed the /functions, /attribs, /commands and /flags switches from
+   @config. Use @list/<switch> instead. [MG]
 
-Functions
+Functions:
  * llocks() without any arguments returns a list of the standard locks.
  * unsetq(), to erase queue registers. [GM]
  * and[l]flags(), or[l]flags(), andlpowers() and orlpowers() now all return
@@ -78,6 +82,9 @@ Fixes:
    marked as translatable. By Stoko.
  * 'No such file' messages were logged by mistake when connect_file and
    similar options were set to a dbref/attr. Reported by Zalethon. [MG]
+ * Some cygwin C library versions define the imaxdiv_t type but not the
+   associated imaxdiv() function. Split them up into 2 configure checks.
+   Reported by Rankard.
 
 & 1.8.3p11
 Version 1.8.3 patchlevel 11                     Jan 01, 2010
