@@ -110,9 +110,7 @@ COMLIST commands[] = {
 
   {"@CHZONE", NULL, cmd_chzone,
    CMD_T_ANY | CMD_T_EQSPLIT | CMD_T_NOGAGGED, 0, 0},
-  {"@CONFIG",
-   "SET SAVE LOWERCASE LIST GLOBALS DEFAULTS COSTS FLAGS FUNCTIONS COMMANDS ATTRIBS",
-   cmd_config, CMD_T_ANY | CMD_T_EQSPLIT, 0, 0},
+  {"@CONFIG", "SET SAVE LOWERCASE LIST",  cmd_config, CMD_T_ANY | CMD_T_EQSPLIT, 0, 0},
   {"@CPATTR", "CONVERT NOFLAGCOPY", cmd_cpattr,
    CMD_T_ANY | CMD_T_EQSPLIT | CMD_T_RS_ARGS,
    0, 0},
